project plan finished

--- a/project plan/references.bib
+++ b/project plan/references.bib
@@ -40,3 +40,25 @@
   year={2020},
   publisher={Wiley Online Library}
 }
+
+@article{alshamrani2015comparison,
+  title={A comparison between three SDLC models waterfall model, spiral model, and Incremental/Iterative model},
+  author={Alshamrani, Adel and Bahattab, Abdullah},
+  journal={International Journal of Computer Science Issues (IJCSI)},
+  volume={12},
+  number={1},
+  pages={106},
+  year={2015},
+  publisher={International Journal of Computer Science Issues (IJCSI)}
+}
+
+@article{norbeck2018hydromechanical,
+  title={Hydromechanical earthquake nucleation model forecasts onset, peak, and falling rates of induced seismicity in Oklahoma and Kansas},
+  author={Norbeck, JH and Rubinstein, Justin L},
+  journal={Geophysical Research Letters},
+  volume={45},
+  number={7},
+  pages={2963--2975},
+  year={2018},
+  publisher={Wiley Online Library}
+}
