--- a/report/references.bib
+++ b/report/references.bib
@@ -8,3 +8,66 @@
   pages={36-46},
   doi={10.1109/MCSE.2021.3052101}
 }
+
+@article{Hough2017WasTM,
+  title={Was the Mw 7.5 1952 Kern County, California, earthquake induced (or triggered)?},
+  author={S. Hough and V. Tsai and R. Walker and F. Aminzadeh},
+  journal={Journal of Seismology},
+  year={2017},
+  volume={21},
+  pages={1613 - 1621}
+}
+
+@article{ellsworth2013injection,
+  title={Injection-induced earthquakes},
+  author={Ellsworth, William L},
+  journal={Science},
+  volume={341},
+  number={6142},
+  year={2013},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{hincks2018oklahoma,
+  title={Oklahoma's induced seismicity strongly linked to wastewater injection depth},
+  author={Hincks, Thea and Aspinall, Willy and Cooke, Roger and Gernon, Thomas},
+  journal={Science},
+  volume={359},
+  number={6381},
+  pages={1251--1255},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{wozniakowska2020machine,
+  title={Machine Learning-Based Analysis of Geological Susceptibility to Induced Seismicity in the Montney Formation, Canada},
+  author={Wozniakowska, Paulina and Eaton, David W},
+  journal={Geophysical Research Letters},
+  volume={47},
+  number={22},
+  pages={e2020GL089651},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{alshamrani2015comparison,
+  title={A comparison between three SDLC models waterfall model, spiral model, and Incremental/Iterative model},
+  author={Alshamrani, Adel and Bahattab, Abdullah},
+  journal={International Journal of Computer Science Issues (IJCSI)},
+  volume={12},
+  number={1},
+  pages={106},
+  year={2015},
+  publisher={International Journal of Computer Science Issues (IJCSI)}
+}
+
+@article{norbeck2018hydromechanical,
+  title={Hydromechanical earthquake nucleation model forecasts onset, peak, and falling rates of induced seismicity in Oklahoma and Kansas},
+  author={Norbeck, JH and Rubinstein, Justin L},
+  journal={Geophysical Research Letters},
+  volume={45},
+  number={7},
+  pages={2963--2975},
+  year={2018},
+  publisher={Wiley Online Library}
+}
