--- a/report/report.tex
+++ b/report/report.tex
@@ -28,10 +28,29 @@
 % Abstract
 \section*{Abstract}
 \blindtext  % outputs some dummy text
+\newpage
 
 % Introduction section
 \section{Introduction}
-\blindtext[2]
+It is well known that humans can cause earthquakes through fluid injection and extraction. Ellsworth stated the understanding of the causes and mechanics of human-induced earthquakes. It includes wastewater injection, emerging oil and gas recovery technologies, and other indirect induced activities,
+including deep fluid injection \citep{ellsworth2013injection}.
+Such cases of induced seismicity have been recorded and proven in Oklahoma, where seismicity has been increased dramatically since 2010 \citep{ellsworth2013injection}.
+In cases like Oklahoma, because the rate of earthquakes was very low before high-rate wastewater injection, it is relatively easy to determine the fundamental causes of induced seismicity.
+Therefore, due to the low background stress in intraplate regions, the human triggering signatures are clearly identifiable.
+However, in tectonically-active areas, it is more challenging to distinfuish between natural and triggered seismicity.
+In tectonically active regions in the US, such as California, although oil and gas extraction has taken place for many decades, only a handful of studies have been published with a focus on these areas \citep{Hough2017WasTM}. 
+In these areas, Big-data and statistical approaches will be crucial in separating natural causes from potential human triggering factors.
+Hincks et al. developed a Bayesian network to for quantitative evaulation of correlations between well operational parameters, geological formation, and seismicity.
+The injection depth relative to crystalline basement was found to be the most significant parameter for seismic moment release \citep{hincks2018oklahoma}.
+
+
+Wozniakowska and Eaton performed a machine learning estimation of the seismogenic activation potential for each well using logistic regression and found that the injection depth influence greatly the seismogenic activation potential \citep{wozniakowska2020machine}.
+Norbeck and Rubinstein genreated a model based on fluid flow and seismic physics, which associate the past injection trends with the seismicity patterns \citep{norbeck2018hydromechanical}.
+
+The correlations of induced earthquakes with fluid extraction and injection are well established. 
+Some physics models are also developed in previous research for earthquake prediction.
+However, these researches do not explain why seismicity does not always occured close to an injection well.
+Also, these studies did not develop a statistical model or a machine-learning model to predict earthquakes based on well documented data (such recorded data in Oklahoma)
 
 % Another section
 \section{My section}
